# NeoMedia3

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
ffmpeg/: setup.sh  setup2.sh  setupOriginal.sh
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
media3extension/: build.gradle.kts  proguard-rules.pro
media3extension/src/main/cpp/: CMakeLists.txt  CMakeLists1.txt  ffaudio.cpp  ffcommon.cpp  ffcommon.h  ffmain.cpp  ffvideo.cpp  frame_extractor.cpp  frame_loader_context.cpp  frame_loader_context.h  log.h  mediainfo.cpp  utils.cpp  utils.h
media3extension/src/main/java/com/muaaz/neomedia3/: FFmpegOnlyRenderersFactory.java  FfmpegAudioDecoder.java  FfmpegAudioRenderer.java  FfmpegDecoderException.java  FfmpegLibrary.java  FfmpegVideoDecoder.java  FfmpegVideoRenderer.java  NeoRenderersFactory.kt  package-info.java
media3extension/src/main/java/com/muaaz/neomedia3/mediaInformation/: AudioStream.kt  FrameLoader.kt  MediaInfo.kt  MediaInfoBuilder.kt  PathUtil.kt  SubtitleStream.kt  VideoStream.kt
